--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,14 @@
     display: inline-block;
 }
 
-.content {
-    min-width:650px;
-    min-height:800px;
+.centerh {
+    width:1000px;
+    margin:0 auto;
+}
+
+.centervh {
+    width:650px;
+    height:800px;
     position:absolute;
     left:50%;
     top:50%;
