Eliminated vertical centering

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@
     margin:0 auto;
 }
 
+.centersh {
+    width:650px;
+    margin:0 auto;
+}
+
 .centervh {
     width:650px;
     height:800px;
