--- a/css/main.css
+++ b/css/main.css
@@ -14,16 +14,17 @@
     margin:0 auto;
 }
 
-.centersh {
-    width:650px;
-    margin:0 auto;
-}
-
 .centervh {
-    width:650px;
-    height:800px;
-    position:absolute;
-    left:50%;
-    top:50%;
-    margin:-400px 0 0 -300px;
+    width: 650px;
+    height: 825px;
+    position: absolute; /*Can also be `fixed`*/
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    /*Solves a problem in which the content is being cut when the div is smaller than its wrapper:*/
+    max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
 }
